<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
        name="viewModel"
        type="com.gdt.inklemaker.nav.inkles.add.setup.SetUpInkleViewModel" />

  </data>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/set_up_form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/set_up_name_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:hint="@string/set_up_name_hint"
          app:endIconMode="clear_text"
          app:errorEnabled="false"
          app:errorMessage="@{viewModel.nameError}">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/set_up_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLength="50"
            android:text="@={viewModel.name}" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/set_up_threads_count_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:hint="@string/set_up_total_threads_hint"
          app:endIconMode="clear_text"
          app:errorEnabled="false"
          app:errorMessage="@{viewModel.threadCountError}">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/set_up_threads_count_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNone"
            android:inputType="number"
            android:maxLength="3"
            android:text="@={viewModel.totalThreadCount}"
            app:errorEnabled="false" />

        <TextView
            android:id="@+id/field_set_up_threads_split_count"
            style="?attr/textAppearanceBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:visibility="gone" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/set_up_length_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:hint="@string/set_up_length_hint"
          app:errorEnabled="false"
          app:errorMessage="@{viewModel.lengthError}">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/set_up_length_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="4"
            android:text="@={viewModel.length}" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.gdt.inklemaker.nav.inkles.add.setup.YarnPickerSpinners
          android:id="@+id/set_up_yarn_picker_spinners"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          app:errorMessage="@{viewModel.yarnError}" />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/set_up_btn_done"
          style="?attr/materialButtonOutlinedStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="40dp"
          android:layout_marginBottom="40dp"
          android:onClick="@{_ -> viewModel.onSetUpDone()}"
          android:text="@string/set_up_done_button" />

      <TextView
          style="?attr/textAppearanceCaption"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="40dp"
          android:text="@string/form_mandatory_field"
          android:textAlignment="textStart" />

    </LinearLayout>
  </ScrollView>
</layout>