<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
        name="viewModel"
        type="com.gdt.inklemaker.nav.inkles.add.setup.YarnPickerViewModel" />

    <variable
        name="isMultipleChoice"
        type="Boolean" />

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ui_yarn_picker_done"
        style="@style/Theme.Button.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_done_24px"
        app:iconGravity="textStart"
        android:text="@string/yarn_picker_done"
        app:visibleIf="@{!viewModel.isListEmpty &amp;&amp; isMultipleChoice}" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ui_yarn_picker_add_more"
        style="@style/Theme.Button.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/ic_add_24px"
        app:iconGravity="textStart"
        android:text="@string/yarn_picker_add_more"
        app:visibleIf="@{!viewModel.isListEmpty}" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ui_yarn_picker_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/ui_yarn_picker_add_more"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:visibleIf="@{!viewModel.isListEmpty}" />

    <TextView
        android:id="@+id/ui_yarn_empty_list"
        style="?attr/textAppearanceSubtitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/yarn_picker_no_yarn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:visibleIf="@{viewModel.isListEmpty}" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ui_yarn_picker_add"
        style="@style/Theme.Button.Outlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/yarn_picker_add"
        app:icon="@drawable/ic_add_24px"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/ui_yarn_empty_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:visibleIf="@{viewModel.isListEmpty}" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>